// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modals should be rendered correctly with many props 1`] = `
<DocumentFragment>
  <div
    class="container modalBlocker"
    style="z-index: 1;"
  >
    <div
      aria-label="Click to close a modal"
      class="uui-modal-blocker"
    />
    <div
      aria-modal="true"
      class="uui-modal-window root modal container"
      role="dialog"
      style="width: 300px; height: 300px; max-height: var(--uui-modals-max-height);"
    >
      <div
        class="root modalHeader uui-modal-header borderBottom"
      >
        <div
          class="uui-modal-title uui-typography"
        >
          Test header
        </div>
        <div
          class="flexSpacer"
        />
        <div
          class="flexCell"
          style="min-width: 0; flex-shrink: 0; flex-basis: auto;"
        >
          <button
            aria-label="Close modal"
            class="uui-button-box uui-enabled -clickable container uui-icon_button uui-color-neutral root"
            tabindex="0"
            type="button"
          >
            <div
              class="container uui-icon uui-enabled"
            >
              <svg
                class=""
              />
            </div>
          </button>
        </div>
      </div>
      <div
        class="root modalFooter uui-modal-footer borderTop"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modals should be rendered correctly with minimum props 1`] = `
<DocumentFragment>
  <div
    class="container modalBlocker"
    style="z-index: 1;"
  >
    <div
      aria-label="Click to close a modal"
      class="uui-modal-blocker"
    />
    <div
      aria-modal="true"
      class="uui-modal-window root modal container"
      role="dialog"
      style="height: auto; max-height: var(--uui-modals-max-height);"
    >
      <div
        class="root modalHeader uui-modal-header"
      />
      <div
        class="root modalFooter uui-modal-footer"
      />
    </div>
  </div>
</DocumentFragment>
`;
